
Revision history for Net::DNS                                     -*-text-*-
=============================
*** 0.59_1 UNRELEASED


Bug Recursing and EDNS OPT record

    The Recursive resolver process would add an OPT-RR with each recursion
    which causes FORMERRs with a number of authoritative servers.


Feature SSHFP warn instead of die

    We do not die if a not implemented fingerprint type value is read
    from the wire, instead we 'warn' and return undef.

Feature NSEC3PARAM hook 

    A hook to load NSEC3PARAM when available has been added.
    WARNING:BOTH NSEC3 and NSEC3 PARAM are configured with their
    expiremental type codes.

Feature rt r24525 

    Net::DNS::Resolver depended on Net::IP (2268 Kb) which depends on
    heavy module Math::BigInt (1780 Kb). Valery Studennikov suggested to
    ship Net::DNS::Resolver::Base with its own copies of ip_is_ipv[4|6] and
    supplied a patch with those functions stripped from Net::IP.

    Note that the package still depends on Net::IP because there are a
    few tests that use it.

Fix rt 22334
    Fixed "perl Makefile.PL --xs" behavior, patch by Tamas Palfalvi

Fix rt 21752 and 24042
    Applied the patch supplied by Alexandr Ciornii to be able
    to compile on ActiveState perl .
    Slight modifications based on comments by nimnul


Fix rt 23961
    Randomized the ID on the queries. Thanks to "hjp" for reporting and
    sugesting a fix.

    The randomization of the src port is supposed to be handled by the
    setting the source port to "0" (default). Overriding the default
    or using persistent sockets may be problematic.

    Also see:
    http://www.potaroo.net/ietf/idref/draft-hubert-dns-anti-spoofing/

Fix 
    Minor compile time warnings for netdns.c on Fedora Core.




*** 0.59 September 18, 2006



Fix rt.cpan.org 20836, 20857, 20994, and 21402

    These tickets all revolved around proper reverse mapping of IPv6
    addresses.
